k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlops-api
  labels:
    app: mlops-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mlops-api
  template:
    metadata:
      labels:
        app: mlops-api
    spec:
      containers:
        - name: api
          image: mlops-week1-multistage:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10 
          livenessProbe: 
            httpGet: 
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
