k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-api-service
spec:
  selector:
    app: mlops-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
