k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: mlops-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
    - host: mlops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mlops-api-service
                port:
                  number: 80
